Change full fp16 to mixed fp16, set model diffusers as default, and other corrections.

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -112,9 +112,9 @@
         "#@markdown Decida el modelo que se descargará y utilizará para el entrenamiento. También puedes elegir tu propio modelo pegando su enlace de descarga o un archivo en tu Google Drive que comience con `/content/drive/MyDrive`.\n",
         "training_model = \"Illustrious_2.0\" # @param [\"Pony Diffusion V6 XL\",\"Animagine XL V3\",\"animagine_4.0_zero\",\"Illustrious_0.1\",\"Illustrious_2.0\",\"NoobAI-XL0.75\",\"NoobAI-XL0.5\",\"Stable Diffusion XL 1.0 base\",\"NoobAIXL0_75vpred\",\"RouWei_v080vpred\"]\n",
         "optional_custom_training_model = \"\" #@param {type:\"string\"}\n",
-        "#@markdown Esto forzara el uso del modelo en formato diffusers, puede ser util en ciertos casos. <p>\n",
-        "#@markdown Manten esto desmarcado para usar un modelo ckpt (.safetensors) para el entrenamiento.\n",
-        "force_load_diffusers = False # @param {\"type\":\"boolean\"}\n",
+        "#@markdown Esto forzara el uso del modelo en formato diffusers, al usar modelo en formato diffusers podras entrenar con `mixd fp16` (recomendado). <p>\n",
+        "#@markdown Desmarca esta opción para usar un modelo ckpt (.safetensors) para el entrenamiento, pero deberas usar `full_fp16` (no recomendado).\n",
+        "force_load_diffusers = True # @param {\"type\":\"boolean\"}\n",
         "#@markdown Marca está opción si el modelo custom esta en dicho formato\n",
         "custom_model_is_diffusers = False #@param {type:\"boolean\"}\n",
         "#@markdown Marca esta opción si tu modelo soporta vpred de lo contrario dejala desmarcada.\n",
@@ -279,7 +279,7 @@
         "#@markdown Utilice `full fp16` para el uso mínimo de memoria. <p>\n",
         "#@markdown `float, full bf16, full fp16, mixed bf16 y mixed fp16` solo funcionaran con colab pro. <p>\n",
         "#@markdown El Lora se entrenará con la precisión seleccionada, pero siempre se guardará en formato fp16 por razones de compatibilidad.\n",
-        "precision = \"full fp16\" #@param [\"float\", \"full fp16\", \"full bf16\", \"mixed fp16\", \"mixed bf16\"]\n",
+        "precision = \"mixed fp16\" #@param [\"float\", \"full fp16\", \"full bf16\", \"mixed fp16\", \"mixed bf16\"]\n",
         "#@markdown El almacenamiento en caché latente en drive agregará un archivo de 250 KB junto a cada imagen, pero usará considerablemente menos memoria.\n",
         "cache_latents = True #@param {type:\"boolean\"}\n",
         "cache_latents_to_drive = False #@param {type:\"boolean\"}\n",
@@ -301,7 +301,7 @@
         "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
         "#@markdown Argumentos recomendado para CAME: `weight_decay=0.04` <p>\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
-        "#@markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`, `full_precision=True`<p>\n",
+        "#@markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`, `full_precision=False`<p>\n",
         "#@markdown Si selecciona Prodigy o Dadapt recomiendo usar `mixed fp16`para mejores resultados. <p>\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
         "#@markdown Alternativamente, establezca sus propios argumentos de optimizador separados por espacios (no comas). `recommended_values` debe estar deshabilitado.\n",
@@ -314,7 +314,7 @@
         "    unet_lr = 0.75\n",
         "    text_encoder_lr = 0.75\n",
         "    network_alpha = network_dim\n",
-        "    full_precision = True\n",
+        "    full_precision = False\n",
         "  if optimizer == \"Prodigy\":\n",
         "    optimizer_args = [\"decouple=True\", \"weight_decay=0.01\", \"betas=[0.9,0.999]\", \"d_coef=2\", \"use_bias_correction=True\", \"safeguard_warmup=True\"]\n",
         "  elif optimizer == \"AdamW8bit\":\n",
@@ -386,6 +386,23 @@
         "  display(HTML(\"<h2 style='color: yellow;'>Descargando dependencias</h2>\"))\n",
         "  !chmod 755 ./colab_install.sh\n",
         "  !./colab_install.sh> install_log.txt 2>&1\n",
+        "  #sobreescribir sdxl_train_util.py\n",
+        "  import requests\n",
+        "\n",
+        "  local = \"/content/trainer/sd_scripts/library/sdxl_train_util.py\"\n",
+        "  url = \"https://raw.githubusercontent.com/gwhitez/LoRA_Easy_Training_scripts_Backend/refs/heads/testing/sdxl_train_util.py\"\n",
+        "\n",
+        "  try:\n",
+        "    response = requests.get(url, timeout=30)\n",
+        "    response.raise_for_status()\n",
+        "\n",
+        "    with open(local, 'w', encoding='utf-8') as f:\n",
+        "        f.write(response.text)\n",
+        "\n",
+        "    print(\"✅ parche para mixed fp16 aplicado\")\n",
+        "  except Exception as e:\n",
+        "    print(f\"❌ Error: {e}\")\n",
+        "\n",
         "  #clear_output()\n",
         "\n",
         "  # patch kohya\n",
