fix tmalloc memory error, add torch and xformers index

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -275,7 +275,7 @@
         "mixed_precision = \"fp16\" #@param [\"bf16\", \"fp16\", \"full_fp16\"]\n",
         "#@markdown `cache_latents_to_drive` agregará un archivo de 250 KB junto a cada imagen, pero utilizará considerablemente menos memoria.\n",
         "cache_latents = True #@param {type:\"boolean\"}\n",
-        "cache_latents_to_drive = False #@param {type:\"boolean\"}\n",
+        "cache_latents_to_drive = True #@param {type:\"boolean\"}\n",
         "#@markdown La siguiente opción desactivará el mezclado de etiquetas `shuffle_tags` y deshabilitará el entrenamiento del codificador de texto.\n",
         "cache_text_encoder_outputs  = False  # @param {type:\"boolean\"}\n",
         "\n",
@@ -367,6 +367,7 @@
         "  !apt -y install aria2 -qq\n",
         "\n",
         "  !pip install uv\n",
+        "  !uv pip install torch torchvision -f https://download.pytorch.org/whl/cu128 --no-progress\n",
         "  !uv pip install accelerate==1.2.1 opencv-python==4.10.0.84 einops==0.8.0\n",
         "  !uv pip install bitsandbytes==0.45.1 pytorch-lightning==1.9.0 voluptuous==0.13.1\n",
         "  !uv pip install invisible-watermark==0.2.0 prodigyopt==1.0.0 lycoris-lora\n",
@@ -374,7 +375,7 @@
         "  !uv pip install toml==0.10.2 safetensors pygments wandb imagesize==1.4.1 pytorch-rex came-pytorch\n",
         "  !uv pip install -e . --no-progress\n",
         "  if cross_attention == \"xformers\":\n",
-        "    !uv pip install xformers --no-progress\n",
+        "    !uv pip install xformers -f https://download.pytorch.org/whl/cu128 --no-progress\n",
         "\n",
         "\n",
         "  # patch kohya for minor stuff\n",
