Rex logic improvements, minor improvements

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -700,11 +700,29 @@
         "  return True\n",
         "\n",
         "def calculate_rex_steps():\n",
-        "  # Reemplazo de BucketManager por implementación local (no usa library.train_util)\n",
-        "  global max_train_steps\n",
+        "  \"\"\"Calcula pasos para el scheduler REX de forma segura\"\"\"\n",
+        "  # Declarar TODAS las variables globales que se usarán\n",
+        "  global max_train_steps, lr_scheduler_args, lr_scheduler_num_cycles, lr_warmup_ratio\n",
+        "  global gradient_accumulation_steps, max_train_epochs, train_batch_size\n",
+        "  global dataset_config_file, min_bucket_reso, max_bucket_reso, bucket_reso_steps\n",
+        "\n",
         "  print(\"\\n🤔 Calculating Rex steps\")\n",
-        "  if max_train_steps:\n",
+        "\n",
+        "  # Validar existencia del archivo de configuración\n",
+        "  if not os.path.exists(dataset_config_file):\n",
+        "    raise FileNotFoundError(f\"❌ Dataset config not found: {dataset_config_file}\")\n",
+        "\n",
+        "  # Validar valores críticos\n",
+        "  if train_batch_size <= 0:\n",
+        "    raise ValueError(\"❌ train_batch_size debe ser mayor que 0\")\n",
+        "\n",
+        "  if lr_scheduler_num_cycles is None or lr_scheduler_num_cycles < 1:\n",
+        "    lr_scheduler_num_cycles = 1\n",
+        "\n",
+        "  # Si max_train_steps ya está definido globalmente, usarlo\n",
+        "  if max_train_steps and max_train_steps > 0:\n",
         "    calculated_max_steps = max_train_steps\n",
+        "    print(f\"  Using predefined max_train_steps: {calculated_max_steps}\")\n",
         "  else:\n",
         "    from PIL import Image\n",
         "    from pathlib import Path\n",
@@ -712,66 +730,89 @@
         "    import toml\n",
         "\n",
         "    # Leer configuración de datasets\n",
-        "    with open(dataset_config_file, \"r\") as f:\n",
-        "      subsets = toml.load(f)[\"datasets\"][0][\"subsets\"]\n",
+        "    try:\n",
+        "      with open(dataset_config_file, \"r\") as f:\n",
+        "        config_data = toml.load(f)\n",
+        "        subsets = config_data[\"datasets\"][0][\"subsets\"]\n",
+        "    except Exception as e:\n",
+        "      raise ValueError(f\"❌ Error reading dataset config: {e}\")\n",
         "\n",
         "    supported_types = {\".png\", \".jpg\", \".jpeg\", \".webp\", \".bmp\"}\n",
         "\n",
-        "    # Construir lista de resoluciones de bucket (cuadradas) e índices\n",
-        "    # Ejemplo: min=256, max=1024, step=128 => [256,384,512,...,1024]\n",
+        "    # Construir lista de resoluciones de bucket (cuadradas)\n",
         "    bucket_resos = list(range(min_bucket_reso, max_bucket_reso + 1, bucket_reso_steps))\n",
         "    if not bucket_resos:\n",
-        "      raise ValueError(\"Rango de buckets inválido\")\n",
+        "      raise ValueError(\"❌ Rango de buckets inválido\")\n",
         "\n",
-        "    # Estructura: map de bucket_reso -> list of image paths (contando repeticiones)\n",
         "    buckets = {r: [] for r in bucket_resos}\n",
         "\n",
         "    def closest_bucket_reso(w, h):\n",
-        "      # Tomamos la dimensión mayor para emparejar la \"resolución\" del bucket\n",
-        "      # Alternativa: usar raíz cuadrada del área; aquí elegimos max(w,h)\n",
+        "      \"\"\"Encuentra el bucket más cercano basado en la dimensión mayor\"\"\"\n",
         "      dim = max(w, h)\n",
-        "      # Encuentra bucket con menor diferencia absoluta\n",
-        "      best = min(bucket_resos, key=lambda r: abs(r - dim))\n",
-        "      return best\n",
+        "      return min(bucket_resos, key=lambda r: abs(r - dim))\n",
         "\n",
-        "    # Poblar buckets con imágenes (respetando num_repeats)\n",
+        "    total_images = 0\n",
+        "\n",
+        "    # Poblar buckets con imágenes\n",
         "    for subset in subsets:\n",
         "      image_dir = subset.get(\"image_dir\")\n",
         "      repeats = int(subset.get(\"num_repeats\", 1))\n",
-        "      if image_dir is None:\n",
+        "\n",
+        "      if not image_dir or not os.path.exists(image_dir):\n",
+        "        print(f\"⚠️  Advertencia: Carpeta no encontrada o inválida: {image_dir}\")\n",
         "        continue\n",
+        "\n",
         "      p = Path(image_dir)\n",
-        "      if not p.exists():\n",
-        "        continue\n",
         "      for image in p.iterdir():\n",
         "        if image.suffix.lower() not in supported_types:\n",
         "          continue\n",
         "        try:\n",
         "          with Image.open(image) as img:\n",
         "            w, h = img.width, img.height\n",
-        "        except Exception:\n",
-        "          # Ignorar imágenes que no se puedan abrir\n",
+        "          bucket_reso = closest_bucket_reso(w, h)\n",
+        "          # Añadir múltiples veces según repeats\n",
+        "          buckets[bucket_reso].extend([image] * repeats)\n",
+        "          total_images += repeats\n",
+        "        except Exception as e:\n",
+        "          print(f\"⚠️  Ignorando imagen corrupta {image}: {e}\")\n",
         "          continue\n",
-        "        bucket_reso = closest_bucket_reso(w, h)\n",
-        "        # Añadir la ruta repetida 'repeats' veces para contar correctamente\n",
-        "        for _ in range(repeats):\n",
-        "          buckets[bucket_reso].append(image)\n",
         "\n",
-        "    # Calcular steps antes de acumulación: ceil(len(bucket) / train_batch_size) por cada bucket\n",
-        "    steps_before_acc = sum(math.ceil(len(images) / train_batch_size) for images in buckets.values())\n",
+        "    if total_images == 0:\n",
+        "      raise ValueError(\"❌ No se encontraron imágenes válidas en el dataset\")\n",
+        "\n",
+        "    # Calcular steps antes de acumulación\n",
+        "    steps_before_acc = sum(\n",
+        "      math.ceil(len(images) / train_batch_size)\n",
+        "      for images in buckets.values()\n",
+        "      if len(images) > 0  # Ignorar buckets vacíos\n",
+        "    )\n",
+        "\n",
         "    # Ajustar por gradient accumulation y épocas\n",
-        "    calculated_max_steps = math.ceil(steps_before_acc / gradient_accumulation_steps) * max_train_epochs\n",
+        "    effective_batch_steps = max(1, gradient_accumulation_steps)\n",
+        "    calculated_max_steps = math.ceil(steps_before_acc / effective_batch_steps) * max_train_epochs\n",
         "\n",
-        "  # Resto: calcular cycle_steps y warmup_steps y añadir a lr_scheduler_args\n",
-        "  cycle_steps = calculated_max_steps // (lr_scheduler_num_cycles or 1)\n",
-        "  print(f\"  cycle steps: {cycle_steps}\")\n",
+        "    print(f\"  Total images (with repeats): {total_images}\")\n",
+        "    print(f\"  Steps before accumulation: {steps_before_acc}\")\n",
+        "    print(f\"  Calculated max steps: {calculated_max_steps}\")\n",
+        "\n",
+        "  # Calcular cycle_steps y warmup_steps\n",
+        "  cycle_steps = calculated_max_steps // lr_scheduler_num_cycles\n",
+        "  print(f\"  Cycle steps: {cycle_steps}\")\n",
+        "\n",
+        "  # Asegurar que lr_scheduler_args es una lista\n",
+        "  if lr_scheduler_args is None:\n",
+        "    lr_scheduler_args = []\n",
+        "\n",
         "  lr_scheduler_args.append(f\"first_cycle_max_steps={cycle_steps}\")\n",
         "\n",
-        "  warmup_steps = round(calculated_max_steps * lr_warmup_ratio) // (lr_scheduler_num_cycles or 1)\n",
+        "  # CORREGIR: Warmup debe aplicarse por ciclo, no dividido\n",
+        "  warmup_steps = round(calculated_max_steps * lr_warmup_ratio / lr_scheduler_num_cycles)\n",
         "  if warmup_steps > 0:\n",
-        "    print(f\"  warmup steps: {warmup_steps}\")\n",
+        "    print(f\"  Warmup steps per cycle: {warmup_steps}\")\n",
         "    lr_scheduler_args.append(f\"warmup_steps={warmup_steps}\")\n",
         "\n",
+        "  # Actualizar max_train_steps global\n",
+        "  max_train_steps = calculated_max_steps\n",
         "\n",
         "def main():\n",
         "  global dependencies_installed\n",
@@ -808,12 +849,16 @@
         "  else:\n",
         "    print(\"\\n🔄 Model already downloaded.\\n\")\n",
         "\n",
-        "  if lr_scheduler_type:\n",
-        "    create_config()\n",
-        "    os.chdir(root_dir)\n",
-        "    calculate_rex_steps()\n",
-        "\n",
         "  create_config()\n",
+        "\n",
+        "  if lr_scheduler_type:\n",
+        "    try:\n",
+        "      calculate_rex_steps()\n",
+        "    except Exception as e:\n",
+        "      print(f\"❌ Error calculating REX steps: {e}\")\n",
+        "      return\n",
+        "\n",
+        "\n",
         "\n",
         "  print(\"\\n⭐ Starting trainer...\\n\")\n",
         "  os.chdir(repo_dir)\n",
