--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -369,7 +369,7 @@
         "  !pip install uv\n",
         "  !uv pip install torch torchvision -f https://download.pytorch.org/whl/cu128 --no-progress\n",
         "  !uv pip install accelerate==1.2.1 opencv-python==4.10.0.84 einops==0.8.0\n",
-        "  !uv pip install bitsandbytes==0.45.1 pytorch-lightning==1.9.0 voluptuous==0.13.1\n",
+        "  !uv pip install bitsandbytes==0.48.2 pytorch_optimizer pytorch-lightning==1.9.0 voluptuous==0.13.1\n",
         "  !uv pip install invisible-watermark==0.2.0 prodigyopt==1.0.0 lycoris-lora\n",
         "  !uv pip install dadaptation==3.1 lion-pytorch==0.1.2 ftfy==6.1.1\n",
         "  !uv pip install toml==0.10.2 safetensors pygments wandb imagesize==1.4.1 pytorch-rex came-pytorch\n",
