--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -284,7 +284,7 @@
         "#@markdown para entrenamiento de `PonyV6` recomiendo usar `Adafactor`. Mientras que `Illustrious` Funciona mejor con `AdamW8bit`\n",
         "optimizer = \"AdamW8bit\" # @param [\"AdamW8bit\",\"Prodigy\",\"DAdaptation\",\"DadaptAdam\",\"DadaptLion\",\"AdamW\",\"Lion\",\"SGDNesterov\",\"SGDNesterov8bit\",\"AdaFactor\",\"came\"]\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
-        "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
+        "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.99] d_coef=1 use_bias_correction=True safeguard_warmup=True`<p> prodigy funciona mejor con: **lr_scheduler: cosine, lr_scheduler_number: 0** <p>\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False` <p>\n",
         "#@markdown Argumentos recomendado para CAME: `weight_decay=0.04`\n",
         "optimizer_args = \"weight_decay=0.1 betas=[0.9,0.99]\" #@param {type:\"string\"}\n",
@@ -370,7 +370,7 @@
         "  !uv pip install torch torchvision -f https://download.pytorch.org/whl/cu128 --no-progress\n",
         "  !uv pip install accelerate==1.2.1 opencv-python==4.10.0.84 einops==0.8.0\n",
         "  !uv pip install bitsandbytes==0.48.2 pytorch_optimizer pytorch-lightning==1.9.0 voluptuous==0.13.1\n",
-        "  !uv pip install invisible-watermark==0.2.0 prodigyopt==1.0.0 lycoris-lora\n",
+        "  !uv pip install invisible-watermark==0.2.0 prodigyopt==1.1.2 lycoris-lora\n",
         "  !uv pip install dadaptation==3.1 lion-pytorch==0.1.2 ftfy==6.1.1\n",
         "  !uv pip install toml==0.10.2 safetensors pygments wandb imagesize==1.4.1 pytorch-rex came-pytorch\n",
         "  !uv pip install -e . --no-progress\n",
