--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -298,10 +298,10 @@
         "optimizer = \"AdaFactor\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\", \"Came\"]\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False` <p>\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
-        "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=2 use_bias_correction=True safeguard_warmup=True`<p>\n",
+        "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.99] d_coef=1 use_bias_correction=True safeguard_warmup=True`<p> prodigy funcionamejor con: **lr_scheduler: cosine, lr_scheduler_number: 0** <p>\n",
         "#@markdown Argumentos recomendado para CAME: `weight_decay=0.04` <p>\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
-        "#@markdown `unet_lr=0.75`, `text_encoder_lr=0.75`, `network_alpha=network_dim`, `full_precision=False`<p>\n",
+        "#@markdown `unet_lr=1`, `text_encoder_lr=1`, `network_alpha=network_dim`, `full_precision=False`<p>\n",
         "#@markdown Si selecciona Prodigy o Dadapt recomiendo usar `mixed fp16`para mejores resultados. <p>\n",
         "recommended_values = True #@param {type:\"boolean\"}\n",
         "#@markdown Alternativamente, establezca sus propios argumentos de optimizador separados por espacios (no comas). `recommended_values` debe estar deshabilitado.\n",
@@ -311,12 +311,12 @@
         "\n",
         "if recommended_values:\n",
         "  if any(opt in optimizer.lower() for opt in [\"dadapt\", \"prodigy\"]):\n",
-        "    unet_lr = 0.75\n",
-        "    text_encoder_lr = 0.75\n",
+        "    unet_lr = 1\n",
+        "    text_encoder_lr = 1\n",
         "    network_alpha = network_dim\n",
         "    full_precision = False\n",
         "  if optimizer == \"Prodigy\":\n",
-        "    optimizer_args = [\"decouple=True\", \"weight_decay=0.01\", \"betas=[0.9,0.999]\", \"d_coef=2\", \"use_bias_correction=True\", \"safeguard_warmup=True\"]\n",
+        "    optimizer_args = [\"decouple=True\", \"weight_decay=0.01\", \"betas=[0.9,0.99]\", \"d_coef=1\", \"use_bias_correction=True\", \"safeguard_warmup=True\"]\n",
         "  elif optimizer == \"AdamW8bit\":\n",
         "    optimizer_args = [\"weight_decay=0.1\", \"betas=[0.9,0.99]\"]\n",
         "  elif optimizer == \"AdaFactor\":\n",
