Replace vae sdxl with vae fp16 fix, disable no half vae

--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -190,9 +190,9 @@
         "  model_file = \"/content/rouwei_v080Vpred.safetensors\"\n",
         "\n",
         "if load_diffusers:\n",
-        "  vae_file= \"stabilityai/sdxl-vae\"\n",
+        "  vae_file= \"madebyollin/sdxl-vae-fp16-fix\"\n",
         "else:\n",
-        "  vae_url = \"https://huggingface.co/stabilityai/sdxl-vae/resolve/main/sdxl_vae.safetensors\"\n",
+        "  vae_url = \"https://huggingface.co/madebyollin/sdxl-vae-fp16-fix/resolve/main/sdxl.vae.safetensors\"\n",
         "  vae_file = \"/content/sdxl_vae.safetensors\"\n",
         "\n",
         "#@markdown ### ▶️ Procesamiento\n",
@@ -284,7 +284,7 @@
         "#@markdown para entrenamiento de `PonyV6` recomiendo usar `Adafactor`. Mientras que `Illustrious` Funciona mejor con `AdamW8bit`\n",
         "optimizer = \"AdamW8bit\" # @param [\"AdamW8bit\",\"Prodigy\",\"DAdaptation\",\"DadaptAdam\",\"DadaptLion\",\"AdamW\",\"Lion\",\"SGDNesterov\",\"SGDNesterov8bit\",\"AdaFactor\",\"came\"]\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
-        "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.99] d_coef=1 use_bias_correction=True safeguard_warmup=True`<p> prodigy funciona mejor con: **lr_scheduler: cosine, lr_scheduler_number: 0** <p>\n",
+        "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=1 use_bias_correction=True safeguard_warmup=True`<p> prodigy funciona mejor con: **lr_scheduler: constant, lr_scheduler_number: 0** <p>\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False` <p>\n",
         "#@markdown Argumentos recomendado para CAME: `weight_decay=0.04`\n",
         "optimizer_args = \"weight_decay=0.1 betas=[0.9,0.99]\" #@param {type:\"string\"}\n",
@@ -514,7 +514,7 @@
         "        \"sdpa\": cross_attention == \"sdpa\",\n",
         "        \"min_snr_gamma\": min_snr_gamma if min_snr_gamma > 0 else None,\n",
         "        \"lowram\": LOWRAM,\n",
-        "        \"no_half_vae\": True,\n",
+        "        \"no_half_vae\": False,\n",
         "        \"gradient_checkpointing\": True,\n",
         "        \"gradient_accumulation_steps\": gradient_accumulation_steps,\n",
         "        \"max_data_loader_n_workers\": 3,\n",
