Replace vae sdxl with vae fp16 fix, disable no half vae

--- a/Fix_Lora_Trainer_XL.ipynb
+++ b/Fix_Lora_Trainer_XL.ipynb
@@ -188,9 +188,9 @@
         "  model_file = \"/content/rouwei_v080Vpred.safetensors\"\n",
         "\n",
         "if load_diffusers:\n",
-        "  vae_file= \"stabilityai/sdxl-vae\"\n",
+        "  vae_file= \"madebyollin/sdxl-vae-fp16-fix\"\n",
         "else:\n",
-        "  vae_url = \"https://huggingface.co/stabilityai/sdxl-vae/resolve/main/sdxl_vae.safetensors\"\n",
+        "  vae_url = \"https://huggingface.co/madebyollin/sdxl-vae-fp16-fix/resolve/main/sdxl.vae.safetensors\"\n",
         "  vae_file = \"/content/sdxl_vae.safetensors\"\n",
         "\n",
         "model_url = model_url.strip()\n",
@@ -298,7 +298,7 @@
         "optimizer = \"AdaFactor\" #@param [\"AdamW8bit\", \"Prodigy\", \"DAdaptation\", \"DadaptAdam\", \"DadaptLion\", \"AdamW\", \"Lion\", \"SGDNesterov\", \"SGDNesterov8bit\", \"AdaFactor\", \"Came\"]\n",
         "#@markdown Argumentos recomendados para Adafactor: `scale_parameter=False relative_step=False warmup_init=False` <p>\n",
         "#@markdown Argumentos recomendados para AdamW8bit: `weight_decay=0.1 betas=[0.9,0.99]`<p>\n",
-        "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.99] d_coef=1 use_bias_correction=True safeguard_warmup=True`<p> prodigy funcionamejor con: **lr_scheduler: cosine, lr_scheduler_number: 0** <p>\n",
+        "#@markdown Argumentos recomendados para Prodigy: `decouple=True weight_decay=0.01 betas=[0.9,0.999] d_coef=1 use_bias_correction=True safeguard_warmup=True`<p> prodigy funcionamejor con: **lr_scheduler: costant, lr_scheduler_number: 0** <p>\n",
         "#@markdown Argumentos recomendado para CAME: `weight_decay=0.04` <p>\n",
         "#@markdown Si se selecciona Dadapt o Prodigy y se marca la casilla recomendada, los siguientes valores recomendados anularán cualquier configuración anterior:<p>\n",
         "#@markdown `unet_lr=1`, `text_encoder_lr=1`, `network_alpha=network_dim`, `full_precision=False`<p>\n",
@@ -316,7 +316,7 @@
         "    network_alpha = network_dim\n",
         "    full_precision = False\n",
         "  if optimizer == \"Prodigy\":\n",
-        "    optimizer_args = [\"decouple=True\", \"weight_decay=0.01\", \"betas=[0.9,0.99]\", \"d_coef=1\", \"use_bias_correction=True\", \"safeguard_warmup=True\"]\n",
+        "    optimizer_args = [\"decouple=True\", \"weight_decay=0.01\", \"betas=[0.9,0.999]\", \"d_coef=1\", \"use_bias_correction=True\", \"safeguard_warmup=True\"]\n",
         "  elif optimizer == \"AdamW8bit\":\n",
         "    optimizer_args = [\"weight_decay=0.1\", \"betas=[0.9,0.99]\"]\n",
         "  elif optimizer == \"AdaFactor\":\n",
@@ -553,7 +553,7 @@
         "        \"sdpa\": cross_attention == \"sdpa\",\n",
         "        \"min_snr_gamma\": min_snr_gamma if min_snr_gamma_enabled else None,\n",
         "        \"ip_noise_gamma\": ip_noise_gamma if ip_noise_gamma_enabled else None,\n",
-        "        \"no_half_vae\": True,\n",
+        "        \"no_half_vae\": False,\n",
         "        \"gradient_checkpointing\": True,\n",
         "        \"gradient_accumulation_steps\": gradient_accumulation_steps,\n",
         "        \"max_data_loader_n_workers\": 1,\n",
