--- a/Dataset_Maker_By_WhiteZ.ipynb
+++ b/Dataset_Maker_By_WhiteZ.ipynb
@@ -149,11 +149,8 @@
         "  os.chdir(kohya_dir)\n",
         "  !git reset --hard e89653975ddf429cdf0c0fd268da0a5a3e8dba1f\n",
         "\n",
-        "  print(\"\\ncreating a virtual environment...\\n\")\n",
-        "  !uv venv\n",
-        "  print(\"successfully created virtual environment\")\n",
+        "  !uv venv --python 3.10\n",
         "\n",
-        "  print(\"\\n🏭 Installing dependencies with uv...\\n\")\n",
         "  !uv pip install --python {venv_python} \\\n",
         "    -r requirements.txt --no-progress \\\n",
         "    fairscale==0.4.13 \\\n",
@@ -161,7 +158,7 @@
         "    onnx \\\n",
         "    onnxruntime-gpu==1.20.1 -f https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/\n",
         "\n",
-        "  # installing rich using uv...\n",
+        "  # installing rich\n",
         "  !uv pip uninstall --python {venv_python} rich\n",
         "\n",
         "  step4_installed_flag = True\n",
