add “--clear” argument when creating the venv

--- a/Dataset_Maker_By_WhiteZ.ipynb
+++ b/Dataset_Maker_By_WhiteZ.ipynb
@@ -149,7 +149,7 @@
         "  os.chdir(kohya_dir)\n",
         "  !git reset --hard e89653975ddf429cdf0c0fd268da0a5a3e8dba1f\n",
         "\n",
-        "  !uv venv --python 3.10\n",
+        "  !uv venv --python 3.10 --clear\n",
         "\n",
         "  !uv pip install --python {venv_python} \\\n",
         "    -r requirements.txt --no-progress \\\n",
