--- a/Old_Fix_Lora_Trainer_XL.ipynb
+++ b/Old_Fix_Lora_Trainer_XL.ipynb
@@ -42,10 +42,10 @@
         "id": "dPQlB4djNm3C"
       },
       "source": [
-        "| | GitHub | Trainer XL | Tagger WDV3 (kohya)  | Tagger WDV3 | Old Trainer XL |\n",
-        "| :--- | :--- | :--- | :--- | :--- | :---|\n",
-        "| 🏠 **Original Proyect** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab) | | | | |\n",
-        "| **Modified By WhiteZ** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/gwhitez/Lora-Trainer-XL) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Dataset_Maker_By_WhiteZ.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Waifu_Diffusion_V3_Dataser_Maker.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Old_Fix_Lora_Trainer_XL.ipynb) |"
+        "| |GitHub|Trainer XL|Old Trainer XL|Tagger WDV3 (kohya)|Tagger WDV3|\n",
+        "|:--|:-:|:-:|:-:|:-:|:-:|\n",
+        "| 🏠 **Original Project** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab) | | | | |\n",
+        "| **Modified By WhiteZ** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/gwhitez/Lora-Trainer-XL) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Old_Fix_Lora_Trainer_XL.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Dataset_Maker_By_WhiteZ.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Waifu_Diffusion_V3_Dataser_Maker.ipynb) |"
       ]
     },
     {
@@ -331,6 +331,7 @@
         "root_dir = \"/content\" if COLAB else pathlib.Path.home() / \"Loras\"\n",
         "deps_dir = os.path.join(root_dir, \"deps\")\n",
         "repo_dir = os.path.join(root_dir, \"kohya-trainer\")\n",
+        "venv_python = os.path.join(repo_dir, \".venv/bin/python\")\n",
         "\n",
         "if \"/Loras\" in folder_structure:\n",
         "  main_dir      = os.path.join(root_dir, \"drive/MyDrive/Loras\") if COLAB else root_dir\n",
@@ -362,20 +363,21 @@
         "    !git reset --hard {COMMIT}\n",
         "  !wget --show-progress -q https://raw.githubusercontent.com/uYouUs/kohya-colab/main/train_network_xl_wrapper.py -q -O train_network_xl_wrapper.py\n",
         "  !wget --show-progress -q https://raw.githubusercontent.com//uYouUs/kohya-colab/main/dracula.py -q -O dracula.py\n",
-        "\n",
+        "  #instalar uv y crear venv con python 3.10\n",
+        "  !curl -LsSf https://astral.sh/uv/install.sh | sh\n",
+        "  !uv venv --python 3.10 --clear\n",
         "  !apt -y update -qq\n",
         "  !apt -y install aria2 -qq\n",
+        "  #instalar requirements.txt y torch\n",
+        "  !uv pip install --python {venv_python} \\\n",
+        "    -r requirements.txt --no-progress \\\n",
+        "    torch torchvision -f https://download.pytorch.org/whl/cu128/\n",
+        "  #fix numpy\n",
+        "  !uv pip install --python {venv_python} \\\n",
+        "   \"numpy<2\" \"opencv-python==4.8.1.78\" --no-cache-dir --no-progress \\\n",
         "\n",
-        "  !pip install uv\n",
-        "  !uv pip install torch torchvision -f https://download.pytorch.org/whl/cu128 --no-progress\n",
-        "  !uv pip install accelerate==1.2.1 opencv-python==4.10.0.84 einops==0.8.0\n",
-        "  !uv pip install bitsandbytes==0.48.2 pytorch_optimizer pytorch-lightning==1.9.0 voluptuous==0.13.1\n",
-        "  !uv pip install invisible-watermark==0.2.0 prodigyopt==1.1.2 lycoris-lora\n",
-        "  !uv pip install dadaptation==3.1 lion-pytorch==0.1.2 ftfy==6.1.1\n",
-        "  !uv pip install toml==0.10.2 safetensors pygments wandb imagesize==1.4.1 pytorch-rex came-pytorch\n",
-        "  !uv pip install -e . --no-progress\n",
         "  if cross_attention == \"xformers\":\n",
-        "    !uv pip install xformers -f https://download.pytorch.org/whl/cu128 --no-progress\n",
+        "    !uv pip install --python {venv_python} xformers -f https://download.pytorch.org/whl/cu128/\n",
         "\n",
         "\n",
         "  # patch kohya for minor stuff\n",
@@ -863,7 +865,7 @@
         "  print(\"\\n⭐ Starting trainer...\\n\")\n",
         "  os.chdir(repo_dir)\n",
         "\n",
-        "  !accelerate launch --quiet --config_file={accelerate_config_file} --num_cpu_threads_per_process=2 --num_processes=2 train_network_xl_wrapper.py --dataset_config={dataset_config_file} --config_file={config_file}\n",
+        "  !{venv_python} -m accelerate.commands.launch --quiet --config_file={accelerate_config_file} --num_cpu_threads_per_process=2 --num_processes=2 train_network_xl_wrapper.py --dataset_config={dataset_config_file} --config_file={config_file}\n",
         "\n",
         "  if not get_ipython().__dict__['user_ns']['_exit_code']:\n",
         "    display(Markdown(\"### ✅ Done! [Go download your Lora from Google Drive](https://drive.google.com/drive/my-drive)\\n\"\n",
