--- a/WhiteZ_Lora_Trainer_SDXL_v2.ipynb
+++ b/WhiteZ_Lora_Trainer_SDXL_v2.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/WhiteZ_Lora_Trainer_SDXL_v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -42,10 +42,10 @@
         "id": "dPQlB4djNm3C"
       },
       "source": [
-        "| | GitHub | Trainer XL | Tagger WDV3 (kohya)  | Tagger WDV3 | Old Trainer XL |\n",
-        "| :--- | :--- | :--- | :--- | :--- | :---|\n",
-        "| 🏠 **Original Proyect** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/hollowstrawberry/kohya-colab) | | | | |\n",
-        "| **Modified By WhiteZ** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg)](https://github.com/gwhitez/Lora-Trainer-XL) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Fix_Lora_Trainer_XL.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Dataset_Maker_By_WhiteZ.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Waifu_Diffusion_V3_Dataser_Maker.ipynb) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg)](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Old_Fix_Lora_Trainer_XL.ipynb) |"
+        "| |GitHub|WhiteZ Lora Trainer SDXL|WhiteZ Lora Trainer SDXL v2|Tagger WDV3 (kohya)|Tagger WDV3|\n",
+        "|:--|:-:|:-:|:-:|:-:|:-:|\n",
+        "| 🏠 **Original Project** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg )](https://github.com/hollowstrawberry/kohya-colab ) | | | | |\n",
+        "| **Modified By WhiteZ** | [![GitHub](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/github.svg )](https://github.com/gwhitez/Lora-Trainer-XL ) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg )](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/WhiteZ_Lora_Trainer_SDXL.ipynb ) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg )](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/WhiteZ_Lora_Trainer_SDXL_v2.ipynb ) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg )](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Dataset_Maker_By_WhiteZ.ipynb ) | [![Open in Colab](https://raw.githubusercontent.com/hollowstrawberry/kohya-colab/main/assets/colab-badge.svg )](https://colab.research.google.com/github/gwhitez/Lora-Trainer-XL/blob/main/Waifu_Diffusion_V3_Dataset_Maker.ipynb ) |"
       ]
     },
     {
